<resources>
    <string name="agora_app_id">04ed50468ee74009b30ed96fd0ad5c5e</string>
    <string name="agora_token_url">https://testehrapi.cybermedehr.com/agora/token</string>
    <string name="one_signal_app_id">54c31771-25e5-4496-82c1-536e449b6eeb</string>
    <string name="login_email">e-mail address</string>
    <string name="login_password">password</string>
    <string name="login_forgot">Forgot your password?</string>
    <string name="login_signup">Sign Up</string>
    <string name="login_confirm_title">Confirm Password Reset?</string>
    <string name="login_confirm_message">A new password will be sent to the contact e-mail associated with </string>
    <string name="login_confirm_positive_btn">Confirm</string>
    <string name="login_confirm_negative_btn">Cancel</string>
    <string name="login_password_reset">The password reset has been sent to your email</string>
    <string name="login_failed">Login failed!</string>
    <string name="login_fingerprint_hint">Touch sensor</string>
    <string name="login_fingerprint_success">Fingerprint recognized</string>
    <string name="login_fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_use_fingerprint_to_authenticate_key">use_fingerprint_to_authenticate_key</string>
    <string name="login_fingerprint_description">Confirm fingerprint to continue</string>
    <string name="login_fingerprint_hint_text">Touch sensor</string>
    <string name="login_description_fingerprint_icon">Fingerprint icon</string>
    <string name="login_fingerprint_not_recognized_text">Fingerprint not recognized. Try again</string>
    <string name="login_fingerprint_success_text">Fingerprint recognized</string>
    <string name="regist_signup">Sign Up</string>
    <string name="regist_done">Done</string>
    <string name="regist_account_label">Account</string>
    <string name="regist_username_text">Your e-mail address will be your username</string>
    <string name="regist_email">E-mail address</string>
    <string name="regist_password">Password</string>
    <string name="regist_confirm">Confirm Password</string>
    <string name="regist_basic_label">Basic Information</string>
    <string name="regist_firstname">First name</string>
    <string name="regist_mi">Mi</string>
    <string name="regist_lastname">Last name</string>
    <string name="regist_male">Male</string>
    <string name="regist_female">Female</string>
    <string name="regist_dob">Date of Birth</string>
    <string name="regist_contact_label">Contact Information</string>
    <string name="regist_phone">Phone number</string>
    <string name="regist_addr1">Address line 1</string>
    <string name="regist_addr2">Address line 2</string>
    <string name="regist_city">City</string>
    <string name="regist_state">State</string>
    <string name="regist_zip">Zip Code</string>
    <string name="regist_next">Next</string>
    <string name="regist_back">Back</string>
    <string name="regist_complete">Complete</string>
    <string name="regist_account_info">Account Information</string>
    <string name="regist_error_email">Invalid email address</string>
    <string name="regist_error_password">Please enter the password</string>
    <string name="regist_error_password_short">Password must be more than 3 characters</string>
    <string name="regist_error_confirm_password">Please confirm password</string>
    <string name="regist_error_firstname">Please enter your first name</string>
    <string name="regist_error_invalid_name">Invalid name</string>
    <string name="regist_error_lastname">Please enter your last name</string>
    <string name="regist_error_dob">Empty Date of Birth</string>
    <string name="regist_error_invalid_dob">Invalid Date of Birth</string>
    <string name="regist_error_phone">Please verify mobile phone number</string>
    <string name="regist_error_addr1">Please enter address line 1</string>
    <string name="regist_error_city">Please enter a City</string>
    <string name="regist_error_state">Please enter a State</string>
    <string name="regist_error_zip">Please enter a Zip Code</string>
    <string name="regist_error_zip_verify">Please verify zip code</string>
    <string name="regist_successful">Operation Successful!</string>
    <string name="regist_successful_message">Thank you for registering! A
        confirmation email has been sent to your email address. Please click
        the action link to activate your account.</string>
    <string name="regist_successful_ok">ok</string>
    <string name="main_home">Home</string>
    <string name="main_me">Me</string>
    <string name="useractivity_profile_heading">Profile</string>
    <string name="useractivity_account">Account</string>
    <string name="useractivity_payment_options">Payment Options</string>
    <string name="useractivity_my_vitals">My Vitals</string>
    <string name="useractivity_call_logs">Call Logs</string>
    <string name="useractivity_about">About</string>
    <string name="useractivity_pharmacy_mode">Pharmacy Mode</string>
    <string name="useractivity_logout_menu">Are you sure you want to logout?</string>
    <string name="useractivity_cancel">Cancel</string>
    <string name="useractivity_logout_bttn">Log Out</string>
    <string name="account_information_heading">Account Information</string>
    <string name="account_information">Account</string>
    <string name="account_information_save">Save</string>
    <string name="account_information_username">Username:</string>
    <string name="account_information_change_password">Change Password</string>
    <string name="account_information_prev_password">Current Password</string>
    <string name="account_information_new_password">New Password</string>
    <string name="account_information_confirm_password">Confirm Password</string>
    <string name="account_information_password_incorrect">Password Incorrect</string>
    <string name="account_information_please_enter_password">Please enter the password</string>
    <string name="account_information_password_notmatch">The passwords do not match.</string>
    <string name="account_information_skip_bttn">Skip</string>
    <string name="account_information_lb_tggl">lb</string>
    <string name="account_information_kg_tggl">kg</string>
    <string name="account_information_ft_tggl">ft</string>
    <string name="account_information_cm_tggl">cm</string>
    <string name="account_information_mmHg">mmHg</string>
    <string name="account_information_F_tggl">F</string>
    <string name="account_information_C_tggl">C</string>
    <string name="account_information_visit_reason">What is the primary reason for visit?</string>
    <string name="account_information_others">others:</string>
    <string name="account_information_smoking_status">Smoking Status:</string>
    <string name="account_information_other_history">Other Social History:</string>
    <string name="account_information_update">Update user information success</string>
    <string name="my_vitals_header">My Vitals</string>
    <string name="my_vitals_update">Update</string>
    <string name="call_logs_heading">Call Logs</string>
    <string name="call_logs_search_date">Search with Date: </string>
    <string name="call_logs_click_date">Click for Date</string>
    <string name="call_logs_to">To: </string>
    <string name="call_logs_time">Time: </string>
    <string name="call_logs_type">Type: </string>
    <string name="call_logs_duration">Duration: </string>
    <string name="call_logs_outgoing">Outgoing</string>
    <string name="call_logs_min"> min</string>
    <string name="call_logs_incoming">Incoming</string>
    <string name="call_logs_from">From: </string>
    <string name="call_logs_empty">No Records Found</string>
    <string name="about_heading">About</string>
    <string name="about_software_version">Software Version</string>
    <string name="about_language">Language</string>
    <string name="about_change_language">Change Language</string>
    <string name="about_english">English</string>
    <string name="about_chinese">Chinese</string>
    <string name="about_select_lang">Please Select Language: </string>
    <string name="about_cancel">Cancel</string>
    <string name="about_change">Change</string>
    <string name="about_state">State</string>
    <string name="pharmacy_mode_heading">Pharmacy Mode</string>
    <string name="pharmacy_mode_paragraph">CDoc is currently running in personal mode.
        To install this device in a pharmacy, please enter the six-digit pharmacy passcode. </string>
    <string name="pharmacy_mode_ok">ok</string>
    <string name="pharmacy_mode_cancel">cancel</string>
    <string name="pharmacy_mode_code">Code</string>
    <string name="my_pharmacies_heading">My Pharmacies</string>
    <string name="my_pharmacies_city_search">Type in City</string>
    <string name="my_pharmacies_show_pharm">Show Pharmacies</string>
    <string name="my_pharmacies_saved_pharm">Saved Pharmacies: </string>
    <string name="my_pharmacies_no_pharm">No Pharmacies</string>
    <string name="signup_fail_heading">Account not created!</string>
    <string name="signup_fail_paragraph">The e-mail you entered may already be registered. Please
        check your information and try again.</string>
    <string name="signup_fail_ok">ok</string>
    <string name="home_heading">Matrimonial Mediation at your Fingertips</string>
    <string name="home_see_doc">See a Mediator</string>
    <string name="home_find_pharmacy">Find Pharmacy</string>
    <string name="home_home_bttn">Home</string>
    <string name="home_me_bttn">Me</string>
    <string name="doclist_heading">Mediators</string>
    <string name="doclist_end_no_more_doc">No More Mediators</string>
    <string name="doclist_loading">Loading</string>
    <string name="doclist_filter_heading">Filter Mediators By:</string>
    <string name="doclist_filter_state">State:</string>
    <string name="doclist_filter_specialty">Specialty:</string>
    <string name="doclist_filter_language">Language:</string>
    <string name="doclist_filter_reset_bttn">Reset Filter</string>
    <string name="doclist_filter_cancel_bttn">Cancel</string>
    <string name="doclist_filter_ok_bttn">OK</string>
    <string name="doc_profile_heading">Mediator Profile</string>
    <string name="doc_profile_specialty">Specialty:</string>
    <string name="doc_profile_language_info">Language:</string>
    <string name="doc_profile_first_min">First Minute(s)</string>
    <string name="doc_profile_every_other_min">Every other Minute(s)</string>
    <string name="doc_profile_first">First </string>
    <string name="doc_profile_every">Every other </string>
    <string name="doc_profile_minutes"> Minute(s)</string>
    <string name="doc_profile_address">Mediator Address</string>
    <string name="doc_profile_info">Mediator Profile Information</string>
    <string name="doc_profile_review">Reviews</string>
    <string name="doc_profile_waiting_room">Join Waiting Room</string>
    <string name="doc_profile_specialty_not_listed">Speciality Not Available</string>
    <string name="doc_profile_language_not_specified">Language not specified</string>
    <string name="doc_profile_coming_soon">Coming Soon</string>
    <string name="doc_pay_heading">Payment Information</string>
    <string name="doc_pay_add_bttn">Add</string>
    <string name="doc_pay_agree_bttn">Agree to pay</string>
    <string name="doc_pay_credit_card">Credit Card</string>
    <string name="vitals_title">Previsit Information</string>
    <string name="vitals_skip">Skip</string>
    <string name="vitals_reason_for_visit">Reason for Visit(Required Field): </string>
    <string name="vitals_others">Others:</string>
    <string name="vitals_waiting_room">Enter Waiting Room</string>
    <string name="vitals_consult">Go To Meeting</string>
    <string name="vitals_phone_number">Contact Phone Number</string>
</resources>