<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_0_1"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/defaultColor"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/vitals_title"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/skipBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:background="@null"
            android:text="@string/vitals_skip"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/focus_thief"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_0_5"
            android:scrollbars="none">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/fillTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/vitals_fill_txt"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/chiefComplaintTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/vitals_reason_for_visit"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:textSize="14dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/linear_layout_border"
                    android:orientation="vertical"
                    android:padding="10dp">


                    <com.guna.libmultispinner.MultiSelectionSpinner
                        android:id="@+id/chiefComplaintSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dropdown" />


                    <EditText
                        android:id="@+id/chiefComplaintEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="2"
                        android:background="@drawable/bg_border_radius_gray"
                        android:hint="@string/vitals_others"
                        android:maxLength="200"
                        android:paddingBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:textSize="14dp" />

                </LinearLayout>


                <include layout="@layout/content_appt_vital_intake"
                    android:visibility="gone"/>

                <include layout="@layout/content_mediation_info"/>

                <TextView
                    android:id="@+id/phoneNumberTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/vitals_phone_number"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:textSize="14dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/linear_layout_border"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/phoneNumberEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_weight="2"
                        android:background="@drawable/bg_border_radius_gray"
                        android:inputType="phone"
                        android:maxLength="12"
                        android:paddingBottom="8dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:textSize="14dp" />

                </LinearLayout>

            </LinearLayout>


        </ScrollView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnConsult"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/selector_btn_blue_corner"
            android:text="@string/vitals_consult"
            android:textColor="@color/white_2_1"
            android:textSize="@dimen/font_size_18" />

        <Button
            android:id="@+id/btnWaitRoom"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/selector_btn_consult_orange_square_corner"
            android:text="@string/vitals_waiting_room"
            android:textColor="@color/white_2_1"
            android:textSize="@dimen/font_size_18" />

        <Button
            android:id="@+id/btnAppointment"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/selector_btn_consult_orange_square_corner"
            android:text="@string/vitals_appointment"
            android:textColor="@color/white_2_1"
            android:textSize="@dimen/font_size_18" />
    </LinearLayout>
</LinearLayout>