<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background" />


    <ImageButton
        android:id="@+id/languageSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:background="@drawable/ic_language"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:src="@drawable/cybermediate_logo" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_user_id"
                    android:layout_gravity="center_vertical"
                    />
                <EditText
                    android:id="@+id/edit_user_id"
                    android:layout_marginLeft="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:background="@color/transparent"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/white"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/icon_user_pwd" />

                <EditText
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:id="@+id/edit_user_pwd"
                    android:layout_marginLeft="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:background="@color/transparent"
                    android:inputType="textPassword"
                    />

                <Button
                    android:id="@+id/fingerprint_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:background="@mipmap/ic_login_fingerprint" />

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:background="@color/white"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/login_login"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@color/defaultColor"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/tv_forget_pwd"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:text="@string/login_forgot"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textSize="17sp"/>

        </LinearLayout>


    </LinearLayout>


    <Button
        android:id="@+id/tv_sign_up"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:text="@string/login_signup"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@color/defaultColor"
        android:layout_centerHorizontal="true"
        android:textSize="17sp"
        android:layout_marginLeft="60dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Powered by CyberMed"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/helpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="Help"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:drawableRight="@mipmap/icon_help"
        android:visibility="gone"/>
</RelativeLayout>